cmake_minimum_required(VERSION 3.10)

project(GLUTApp VERSION 1.0)

set(OpenGL_GL_PREFERENCE GLVND)

find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)

add_executable(main
    main.cpp
    maze.cpp
    demo3.cpp
)

target_include_directories(main PRIVATE src)

target_link_libraries(main PRIVATE
    OpenGL::GL
    OpenGL::GLU
    GLUT::GLUT
)
